web-infras/parser/tests/fixtures/babel/es2015/yield/function-name-function-declaration-inside-generator/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (2,12)
2|  function yield() {}
 |          ^
